[gd_scene load_steps=7 format=2]

[ext_resource path="res://world/assets/ground.png" type="Texture" id=1]
[ext_resource path="res://character/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://thrower/Thrower.tscn" type="PackedScene" id=3]
[ext_resource path="res://world/Level.gd" type="Script" id=4]
[ext_resource path="res://ui/IconCounter.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 8 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 160.0
margin_bottom = 140.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thrower" parent="." instance=ExtResource( 3 )]
position = Vector2( 80, 32 )

[node name="Ground" type="Area2D" parent="."]
position = Vector2( 0, 124 )
collision_layer = 2147483652
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Ground"]
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 80, 8 )
shape = SubResource( 1 )

[node name="Character" parent="." instance=ExtResource( 2 )]
position = Vector2( 80, 116 )

[node name="IconCounter" parent="." instance=ExtResource( 5 )]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
[connection signal="area_entered" from="Ground" to="." method="_on_Ground_area_entered"]
[connection signal="item_picked" from="Character" to="." method="_on_Character_item_picked"]
